vault/app-allow-vault.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-vault
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: app
    ports:
    - port: 8200
      protocol: TCP
  podSelector:
    matchLabels:
      app: vault
  policyTypes:
  - Ingress
